--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,6 +13,7 @@
 @import 'sections/_header';
 @import 'sections/_consultorio';
 @import 'sections/_tabs-container';
+@import 'sections/_tabs-container-centro';
 @import 'sections/_grupos-apoyo';
 @import 'sections/_banner-dudas';
 @import 'sections/_formulario';
