--- a/css/style.css
+++ b/css/style.css
@@ -929,6 +929,172 @@ section.tabs_container .accordion .ui-accordion-content ul li:hover:after {
   display: none;
 }
 
+/* ---------------------------------- tabs  -----------------------------
+	------------------------------------------------------------------------------- */
+section.tabs_container_centro ul {
+  margin: 0;
+  padding: 0;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  -ms-grid-columns: 1fr 1fr 1fr 1fr 1fr;
+  border-bottom: 2px solid #E6E6E6;
+  margin-bottom: 2rem;
+}
+@supports (display: grid) {
+  section.tabs_container_centro ul {
+    display: -ms-grid;
+    display: grid;
+  }
+}
+@supports (-ms-ime-align: auto) {
+  section.tabs_container_centro ul {
+    display: -ms-grid;
+    display: grid;
+  }
+}
+@supports not (display: grid) {
+  section.tabs_container_centro ul {
+    display: inline-block;
+  }
+}
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+  section.tabs_container_centro ul {
+    display: -ms-grid;
+  }
+}
+section.tabs_container_centro ul li {
+  text-align: center;
+  position: relative;
+  -webkit-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+section.tabs_container_centro ul li:hover:after {
+  width: 100%;
+  height: 3px;
+  background: #EC2462;
+  position: absolute;
+  content: "";
+  left: 0;
+  bottom: -2px;
+  -webkit-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+section.tabs_container_centro ul li a {
+  color: #EC2462;
+}
+section.tabs_container_centro ul li a:after {
+  display: none;
+}
+section.tabs_container_centro ul li.ui-state-active:after {
+  width: 100%;
+  height: 3px;
+  background: #EC2462;
+  position: absolute;
+  content: "";
+  left: 0;
+  bottom: -2px;
+}
+section.tabs_container_centro .ui-tabs-panel {
+  grid-template-columns: 1fr 2fr;
+  -ms-grid-columns: 1fr 2fr;
+}
+@supports (display: grid) {
+  section.tabs_container_centro .ui-tabs-panel {
+    display: -ms-grid;
+    display: grid;
+  }
+}
+@supports (-ms-ime-align: auto) {
+  section.tabs_container_centro .ui-tabs-panel {
+    display: -ms-grid;
+    display: grid;
+  }
+}
+@supports not (display: grid) {
+  section.tabs_container_centro .ui-tabs-panel {
+    display: inline-block;
+  }
+}
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+  section.tabs_container_centro .ui-tabs-panel {
+    display: -ms-grid;
+  }
+}
+section.tabs_container_centro .ui-tabs-panel .content_left {
+  padding: 2rem;
+}
+section.tabs_container_centro .ui-tabs-panel .content_right {
+  padding: 5rem 4rem 2rem 4rem;
+  position: relative;
+  background: #FBEBEF;
+}
+section.tabs_container_centro .ui-tabs-panel .content_right:before {
+  width: 60%;
+  height: 100%;
+  background: #FBEBEF;
+  position: absolute;
+  content: "";
+  left: -15rem;
+  top: 0;
+  z-index: -1;
+}
+section.tabs_container_centro #accordion .click,
+section.tabs_container_centro .accordion .click {
+  border: 1px solid #EC2462;
+  border-radius: 0.2rem;
+  padding: 0.5rem 1rem;
+  text-transform: uppercase;
+  cursor: pointer;
+  background: url(../../images/svg/plus-icon.svg);
+  background-repeat: no-repeat;
+  background-position: 99% 50%;
+  -webkit-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  font-size: 17px;
+  line-height: 24px;
+  font-weight: 300;
+  font-family: din-2014, sans-serif;
+  color: #EC2462;
+  letter-spacing: 0;
+}
+section.tabs_container_centro #accordion .click:hover,
+section.tabs_container_centro .accordion .click:hover {
+  background: url(../../images/svg/plus-icon-white.svg) #EC2462;
+  color: #ffffff;
+  background-repeat: no-repeat;
+  background-position: 99% 50%;
+}
+section.tabs_container_centro #accordion .ui-accordion-content,
+section.tabs_container_centro .accordion .ui-accordion-content {
+  border: 1px solid #EC2462;
+  height: auto !important;
+  padding: 0 1rem;
+  border-radius: 0.2rem;
+}
+section.tabs_container_centro #accordion .ui-accordion-content ul,
+section.tabs_container_centro .accordion .ui-accordion-content ul {
+  padding: inherit;
+  margin: 1rem;
+  border-bottom: 0;
+  grid-template-columns: 1fr;
+  -ms-grid-columns: 1fr;
+}
+section.tabs_container_centro #accordion .ui-accordion-content ul:hover:after,
+section.tabs_container_centro .accordion .ui-accordion-content ul:hover:after {
+  display: none;
+}
+section.tabs_container_centro #accordion .ui-accordion-content ul li,
+section.tabs_container_centro .accordion .ui-accordion-content ul li {
+  text-align: left;
+  list-style-type: initial;
+}
+section.tabs_container_centro #accordion .ui-accordion-content ul li:hover:after,
+section.tabs_container_centro .accordion .ui-accordion-content ul li:hover:after {
+  display: none;
+}
+
 /* ---------------------------------- grupos de apoyo  -----------------------------
 	------------------------------------------------------------------------------- */
 section.grupos_apoyo .first_fold {
@@ -1107,17 +1273,19 @@ section.grupos_apoyo .third_fold > div.open {
 /* ---------------------------------- banner dudas  -----------------------------
 	------------------------------------------------------------------------------- */
 section.banner_dudas {
-  background: url(../../images/photos/banner-form.jpg);
+  background: url(../../images/photos/banner-pre.jpg);
   margin: 3rem auto;
   text-align: center;
   padding: 5rem 1rem;
   border-radius: 0.3rem;
+  background-size: cover;
 }
 section.banner_dudas h1,
 section.banner_dudas p {
   color: #ffffff;
   max-width: 780px;
   margin: 1rem auto;
+  text-shadow: 0 0 black;
 }
 section.banner_dudas a {
   padding: 1rem;
@@ -1131,6 +1299,7 @@ section.banner_dudas a {
   font-family: din-2014, sans-serif;
   color: #0077C8;
   letter-spacing: 1px;
+  text-shadow: 0 0 black;
   margin: 1rem auto 1rem;
 }
 section.banner_dudas a:hover {
