--- a/index.jade
+++ b/index.jade
@@ -315,78 +315,126 @@ block content
 		
 		div.cards_container
 			//-+lo-nuevo-cards('../../images/photos/noticias-icon.png', 'Centro de noticias', 'Centro de noticias', '#', 'ver noticias')
-			+lo-nuevo-cards('../../images/photos/facultad-icon.png', 'Facultad de Ciencias Jurídicas', 'Facultad de Ciencias Jurídicas', 'http://juridicasypoliticas.unbosque.edu.co', 'acceder')
-			+lo-nuevo-cards('../../images/photos/ayuda-icon.png', 'Centro de Ayuda', 'Centro de Atención al Estudiante', 'http://juridicasypoliticas.unbosque.edu.co/centro-de-atencion-estudiantil', 'acceder')
-			+lo-nuevo-cards('../../images/photos/preguntas-icon.png', 'Preguntas Frecuentes', 'Preguntas Frecuentes', '#', 'Consultar')
+			+lo-nuevo-cards('../../images/photos/facultad_virtual.jpg', 'Facultad de Ciencias Jurídicas', 'Facultad de Ciencias Jurídicas', 'http://juridicasypoliticas.unbosque.edu.co', 'acceder')
+			+lo-nuevo-cards('../../images/photos/centro-estudiantes.jpg', 'Centro de Ayuda', 'Centro de Atención al Estudiante', 'http://juridicasypoliticas.unbosque.edu.co/centro-de-atencion-estudiantil', 'acceder')
+			+lo-nuevo-cards('../../images/photos/preguntas-frecuentes.jpg', 'Preguntas Frecuentes', 'Preguntas Frecuentes', '#', 'Consultar')
+
+	
+	header(style="background-color:#EC2462")
+		br
+		br
+		div.second_fold
+			div
+				h1(style="font-size: 64px;line-height: 74px;") Centro de Conciliación
+				p(style="color:white;font-size: 24px;") con la confianza que estos serán atendidos y resueltos con prontitud y calidad, por un equipo altamente capacitado y con calidad humana. 
+			div
+				img(src="../../images/photos/header-banner_centro.png" alt="header-banner")
+
 
 	section.consultorio#centroconciliacion
 		div.left_content
-			img(src="../../images/photos/centroconciliacion_1.png" alt="centro conciliacion")
+			img(src="../../images/photos/logo-centro.png" alt="centro conciliacion")
 		div.right_content
-			h2 Centro de Conciliación
+			h2(style="color:#EC2462;") Centro de Conciliación
 			p Somos una dependencia adscrita a la Facultad de Ciencias Jurídicas y Políticas creado en cumplimiento de la ley 640 de 2001 para facilitar el diálogo entre las partes involucradas en un conflicto, quienes mediante la aplicación de la conciliación gestionan por sí mismas la solución de sus diferencias con la ayuda de un tercero imparcial, neutral y objetivo, denominado Conciliador.
-			h4 Nuestra MISIÓN
+			h4(style="color:#EC2462;font-weight: bold;") Nuestra MISIÓN
 			p Promover el acceso a la justicia por parte de las personas de escasos recursos y/o pertenecientes a alguno de los grupos más vulnerables de la población, para servir como facilitador en la solución de diferencias a través de la utilización de los Métodos Alternativos de Solución de Conflictos -MASC- y principalmente el de la conciliación, con la participación de los estudiantes y los docentes asesores plenamente capacitados para ello.
-			h4 Nuestra VISIÓN
+			h4(style="color:#EC2462;font-weight: bold;") Nuestra VISIÓN
 			p El CCCJ busca ser un Centro líder en el país en la prestación del servicio de la conciliación, e innovador en la pedagogía, promoción, divulgación y recta aplicación de los MASC, teniendo como fundamento el servicio social, la igualdad y el respeto por el otro y contribuyendo a la formación de profesionales idóneos y comprometidos con la justicia.
-			h4 Trámite de atención al usuario.
-			p Usted puede acceder a los servicios del Consultorio Jurídico de la Universidad El Bosque de la siguiente manera:
-			ul
-				li <span style="color:#0077C8">1.</span> Llenando el formulario virtual: Una vez sea remitido, nos comunicaremos con Usted para acordar el día y la hora de la entrevista, así como la forma en que se llevará a cabo, telefónica o por medios virtuales, de acuerdo con su elección.
-				li <span style="color:#0077C8">2.</span> Puede contactarnos por medio de nuestra extensión o nuestro celular, llamando al <span style="color:#0077C8">6489000 ext. 1585</span> Celular <span style="color:#0077C8">3053903206.</span>
-				li <span style="color:#0077C8">3.</span> Puede contactarnos por medio de nuestro WhatsApp al <span style="color:#0077C8">3053903206.</span>
-				li <span style="color:#0077C8">4.</span> Puede escribirnos al <a href='mailto:consultoriojurídico@unbosque.edu.co' target='_blank'>consultoriojurídico@unbosque.edu.co</a>.
 			
-	section(style="text-align:center;margin-bottom:4rem;")
-		h1 Preguntas Frecuentes
-	section.consultorio#preguntascentroconciliacion(style="margin-top:-4em;")
+	section(style="text-align:center;margin-bottom:4rem;background: #FBEBEF;padding: 70px 70px 0px 70px;max-width: 1200px;")
+		h1(style="color:#EC2462;") Preguntas Frecuentes
+	section.consultorio#preguntascentroconciliacion(style="margin-top:-4em;background: #FBEBEF; padding: 0px 70px 70px 70px;")
 		div.left_content(style="padding-right:40px;")
-			h4 ¿Qué es el Centro de Conciliación?
+			h4(style="color:#EC2462;font-weight: bold;") ¿Qué es el Centro de Conciliación?
 			p Dependencia autónoma del Consultorio Jurídico de la Universidad El Bosque cuya autorización se encuentra en trámite ante el Ministerio de Justicia y del Derecho.
-			h4 ¿Qué hace el Centro de Conciliación?
+			h4(style="color:#EC2462;font-weight: bold;") ¿Qué hace el Centro de Conciliación?
 			p Administra justicia.
-			h4 ¿Cómo lo hace?
+			h4(style="color:#EC2462;font-weight: bold;") ¿Cómo lo hace?
 			p Realizando Audiencias de Conciliación Extrajudiciales en Derecho.
-			h4 ¿Quiénes lo hacen?
+			h4(style="color:#EC2462;font-weight: bold;") ¿Quiénes lo hacen?
 			p Nuestros Estudiantes Conciliadores y Docentes Asesores Conciliadores
-			h4 ¿Dónde se hace?
-			p En la Sede del CCCJ La conciliación es  un mecanismo de resolución de conflictos a través del cual dos o más personas gestionan por sí mismas la solución de sus diferencias con la ayuda de un tercero neutral y calificado denominado conciliador. (Art. 64 ley 446 de 1998) El efecto del acuerdo conciliatorio es el TRÁNSITO A COSA JUZGADA y el del Acta de Conciliación es que presta MÉRITO EJECUTIVO.
-			h4 ¿Qué es la conciliación?
-			p Es un mecanismo de resolución de conflictos a través del cual dos o mas personas gestionan por sí mismas la solución de sus diferencias con la ayuda de un tercero neutral y calificado denominado conciliador.
 		div.right_content(style="padding-left:40px;")
-			h4 ESTRUCTURA DEL CCCJ 
+			h4(style="color:#EC2462;font-weight: bold;") ESTRUCTURA DEL CCCJ 
 			p  Director del Centro de Conciliación - Docentes Asesores Conciliadores - Practicante de Psicología - Secretaria - Estudiantes Conciliadores
-			h4 Asuntos conciliables:
-			ul 
-				li - Custodia y régimen de visitas de menores
-				li - Obligaciones    alimentarias.
-				li - Fijación, Ofrecimiento, Disminución, Aumento, Exoneración.
-				li - Disolución y liquidación de sociedad conyugal
-				li - Liquidaciones de la sociedad patrimonial entre compañeros permanentes. 
-				li - Unión Marital de Hecho. (Declaración y Disolución)
-				li - Responsabilidad civil
-				li - Reconocimiento de obligación
-				li - Restitución de inmueble arrendado
-				li - Acuerdos de pago
-			h4 Etapas del procedimiento conciliatorio
-			ul
-				li - Asesoría en Consultorio Jurídico y elaboración de la solicitud de Audiencia de Conciliación. 
-				li - Designación de conciliador. 
-				li - Revisión y control de legalidad a la solicitud.
-				li - Calificación del asunto. 
-				li - Programación de fecha y hora para la realización de la Audiencia de Conciliación.
-				li - Elaboración y envío de las Citaciones a las partes. 
-				li - Día de la Audiencia: Realización de la Audiencia de conciliación o no realización.
-				li - Elaboración del Acta de Conciliación o Constancia según sea el caso. 
-				li - Registro ante el SICAAC.
+			h4(style="color:#EC2462;font-weight: bold;") ¿Dónde se hace?
+			p En la Sede del CCCJ La conciliación es  un mecanismo de resolución de conflictos a través del cual dos o más personas gestionan por sí mismas la solución de sus diferencias con la ayuda de un tercero neutral y calificado denominado conciliador. (Art. 64 ley 446 de 1998) El efecto del acuerdo conciliatorio es el TRÁNSITO A COSA JUZGADA y el del Acta de Conciliación es que presta MÉRITO EJECUTIVO.
+			h4(style="color:#EC2462;font-weight: bold;") ¿Qué es la conciliación?
+			p Es un mecanismo de resolución de conflictos a través del cual dos o mas personas gestionan por sí mismas la solución de sus diferencias con la ayuda de un tercero neutral y calificado denominado conciliador.
 			
+	section.tabs_container_centro#centro
+		
+		div#tabs_2.tabs
+			ul(style="grid-template-columns: 1fr 1fr;color:#EC2462;")
+				li: a(href="#tabs-6") Asuntos conciliables
+				li: a(href="#tabs-7") Etapas del procedimiento conciliatorio
+					
+				
+			div#tabs-6
+				div.content_left
+					img(src='../../images/photos/ilustracion-asuntos-conciliables.png' alt='Derecho laboral y seguridad social') 
+				div.content_right
+					p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.					
+					div.accordion
+						<div class="click"> Algunos asuntos que se atienden </div>
+							div
+								ul
+									li Custodia y régimen de visitas de menores
+									li Obligaciones alimentarias.
+									li Fijación, Ofrecimiento, Disminución, Aumento, Exoneración.
+									li Disolución y liquidación de sociedad conyugal
+									li Liquidaciones de la sociedad patrimonial entre compañeros permanentes. 
+									li Unión Marital de Hecho. (Declaración y Disolución)
+									li Responsabilidad civil
+									li Reconocimiento de obligación
+									li Restitución de inmueble arrendado
+									li Acuerdos de pago
+
+									
+									
+			div#tabs-7
+				div.content_left
+					img(src='../../images/photos/ilustracion-etapas-conciliacion.png' alt='Derecho de familia') 
+				div.content_right
+					p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+					div.accordion
+						<div class="click"> Algunos asuntos que se atienden </div>
+							div
+								ul
+									li Asesoría en Consultorio Jurídico y elaboración de la solicitud de Audiencia de Conciliación. 
+									li Designación de conciliador. 
+									li Revisión y control de legalidad a la solicitud.
+									li Calificación del asunto. 
+									li Programación de fecha y hora para la realización de la Audiencia de Conciliación.
+									li Elaboración y envío de las Citaciones a las partes. 
+									li Día de la Audiencia: Realización de la Audiencia de conciliación o no realización.
+									li Elaboración del Acta de Conciliación o Constancia según sea el caso. 
+									li Registro ante el SICAAC.
     
-	section.formulario
-		h1 Formulario Virtual 
-		p Una vez se reciba la información, el Consultorio Jurídico de la Universidad El Bosque se comunicará con Usted para acordar el día y hora que se hará la entrevista y la forma en que se realizará, ya sea vía telefónica o por medios virtuales.
-		a(href='#' style="border:solid") Registrarme en el Consultorio Jurídico
+	section.formulario(style="background: transparent;")
+		img(src='../../images/photos/infografia_tramite.png' alt='legal icon' style="width:60%; margin-left:auto;margin-right:auto;")
 
 
+	section.formulario(style="background: #FBEBEF;")
+		h1(style="color:#EC2462") Formulario Inscripción Centro de Conciliación 
+		p Una vez se reciba la información, el Centro de Conciliación de la Universidad El Bosque se comunicará con Usted para acordar el día y hora que se hará la entrevista y la forma en que se realizará, ya sea vía telefónica o por medios virtuales.
+		a(href='#' style="border:solid;color:#EC2462") Registrarme Ahora
+	
+	section(style="text-align:center;margin-bottom:4rem;")
+		h1(style="color:#EC2462;") Nuestro Centro de Conciliación
+		p(style="margin-left: auto;margin-right: auto;") Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+
+	section
+		div.carousel.carousel-main(data-flickity='{ "imagesLoaded": true, "percentPosition": false }')
+				img(src='../../images/photos/instalaciones/1.png' alt='legal icon' style="margin-left:30px;margin-right:30px;"  )
+				img(src='../../images/photos/instalaciones/2.png' alt='legal icon' style="margin-left:30px;margin-right:30px;")
+				img(src='../../images/photos/instalaciones/3.png' alt='legal icon' style="margin-left:30px;margin-right:30px;")
+				img(src='../../images/photos/instalaciones/4.png' alt='legal icon' style="margin-left:30px;margin-right:30px;")
+				img(src='../../images/photos/instalaciones/5.png' alt='legal icon' style="margin-left:30px;margin-right:30px;")
+				img(src='../../images/photos/instalaciones/6.png' alt='legal icon' style="margin-left:30px;margin-right:30px;")
+				img(src='../../images/photos/instalaciones/7.png' alt='legal icon' style="margin-left:30px;margin-right:30px;")
+	br
+	br
 	section.informacion_legal
 		img(src='../../images/svg/legal-icon.svg' alt='legal icon')
 		h1 Información legal de interés para la Comunidad
@@ -433,23 +481,3 @@ block content
 		
 		div.second_fold
 			p Vigilada Mineducación. Personería Jurídica otorgada mediante resolución 11153 del 4 de Agosto de 1978.
-				
-				
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
