--- a/scss/sections/_tabs-container-centro.scss
+++ b/scss/sections/_tabs-container-centro.scss
@@ -155,4 +155,10 @@
     
     
     
-    
+    .flickity-page-dots .dot{
+        background: $color_rosa_dark!important;
+    }
+    .flickity-prev-next-button.next{
+        color: $color_rosa_dark!important;
+
+    }
