--- a/scss/sections/_tabs-container-centro.scss
+++ b/scss/sections/_tabs-container-centro.scss
@@ -162,3 +162,7 @@
         color: $color_rosa_dark!important;
 
     }
+    .flickity-prev-next-button.previous{
+        color: $color_rosa_dark!important;
+
+    }
