--- a/index.jade
+++ b/index.jade
@@ -44,7 +44,7 @@ block content
 			
 			p El Consultorio Jurídico de la Universidad El Bosque, es el espacio dentro del cual los estudiantes de los últimos semestres de la facultad de Derecho realizan su práctica jurídica, brindando asesoría y representación legal gratuita y de calidad, a personas que se encuentran en estado de vulnerabilidad económica y social, esto dentro de las competencias asignadas por la ley y en cumplimiento del perfil biopsicosocial y cultural que identifica a nuestra comunidad universitaria.
 			
-			h4 ¿Cuál es nuestra Misión?
+			h4(style="color:#0077C8") ¿Cuál es nuestra Misión?
 			
 			p El Consultorio Jurídico de la Universidad El Bosque, cumple una doble misión; de una parte, brindar un espacio académico en el cual los alumnos de los últimos años de la Facultad de Derecho ponen en práctica los conocimientos adquiridos durante su carrera; y de la otra, cumplir con una función social, prestando atención jurídica gratuita y de calidad a la comunidad, siempre inculcando el respeto a la dignidad humana, a los principios y a los valores éticos que rigen su profesión, bajo la constante supervisión de abogados expertos en cada una de las áreas del Derecho.
 			
@@ -325,7 +325,7 @@ block content
 		br
 		div.second_fold
 			div
-				h1(style="font-size: 64px;line-height: 74px;") Centro de Conciliación
+				h1(style="font-size: 45px;line-height: 53px;") Centro de Conciliación
 				p(style="color:white;font-size: 24px;") con la confianza que estos serán atendidos y resueltos con prontitud y calidad, por un equipo altamente capacitado y con calidad humana. 
 			div
 				img(src="../../images/photos/header-banner_centro.png" alt="header-banner")
@@ -342,30 +342,30 @@ block content
 			h4(style="color:#EC2462;font-weight: bold;") Nuestra VISIÓN
 			p El CCCJ busca ser un Centro líder en el país en la prestación del servicio de la conciliación, e innovador en la pedagogía, promoción, divulgación y recta aplicación de los MASC, teniendo como fundamento el servicio social, la igualdad y el respeto por el otro y contribuyendo a la formación de profesionales idóneos y comprometidos con la justicia.
 			
-	section(style="text-align:center;margin-bottom:4rem;background: #FBEBEF;padding: 70px 70px 0px 70px;max-width: 1200px;")
+	section(style="text-align:center;margin-bottom:4rem;background: #FBEBEF;padding: 70px 70px 30px 70px;max-width: 1200px;")
 		h1(style="color:#EC2462;") Preguntas Frecuentes
 	section.consultorio#preguntascentroconciliacion(style="margin-top:-4em;background: #FBEBEF; padding: 0px 70px 70px 70px;")
-		div.left_content(style="padding-right:40px;")
-			h4(style="color:#EC2462;font-weight: bold;") ¿Qué es el Centro de Conciliación?
+		div.left_content
+			h4 ¿Qué es el Centro de Conciliación?
 			p Dependencia autónoma del Consultorio Jurídico de la Universidad El Bosque cuya autorización se encuentra en trámite ante el Ministerio de Justicia y del Derecho.
-			h4(style="color:#EC2462;font-weight: bold;") ¿Qué hace el Centro de Conciliación?
+			h4 ¿Qué hace el Centro de Conciliación?
 			p Administra justicia.
-			h4(style="color:#EC2462;font-weight: bold;") ¿Cómo lo hace?
+			h4 ¿Cómo lo hace?
 			p Realizando Audiencias de Conciliación Extrajudiciales en Derecho.
-			h4(style="color:#EC2462;font-weight: bold;") ¿Quiénes lo hacen?
+			h4 ¿Quiénes lo hacen?
 			p Nuestros Estudiantes Conciliadores y Docentes Asesores Conciliadores
-		div.right_content(style="padding-left:40px;")
-			h4(style="color:#EC2462;font-weight: bold;") ESTRUCTURA DEL CCCJ 
+		div.right_content
+			h4 ESTRUCTURA DEL CCCJ 
 			p  Director del Centro de Conciliación - Docentes Asesores Conciliadores - Practicante de Psicología - Secretaria - Estudiantes Conciliadores
-			h4(style="color:#EC2462;font-weight: bold;") ¿Dónde se hace?
+			h4 ¿Dónde se hace?
 			p En la Sede del CCCJ La conciliación es  un mecanismo de resolución de conflictos a través del cual dos o más personas gestionan por sí mismas la solución de sus diferencias con la ayuda de un tercero neutral y calificado denominado conciliador. (Art. 64 ley 446 de 1998) El efecto del acuerdo conciliatorio es el TRÁNSITO A COSA JUZGADA y el del Acta de Conciliación es que presta MÉRITO EJECUTIVO.
-			h4(style="color:#EC2462;font-weight: bold;") ¿Qué es la conciliación?
+			h4 ¿Qué es la conciliación?
 			p Es un mecanismo de resolución de conflictos a través del cual dos o mas personas gestionan por sí mismas la solución de sus diferencias con la ayuda de un tercero neutral y calificado denominado conciliador.
 			
 	section.tabs_container_centro#centro
 		
 		div#tabs_2.tabs
-			ul(style="grid-template-columns: 1fr 1fr;color:#EC2462;")
+			ul
 				li: a(href="#tabs-6") Asuntos conciliables
 				li: a(href="#tabs-7") Etapas del procedimiento conciliatorio
 					
@@ -416,13 +416,13 @@ block content
 
 
 	section.formulario(style="background: #FBEBEF;")
-		h1(style="color:#EC2462") Formulario Inscripción Centro de Conciliación 
+		h1 Formulario Inscripción Centro de Conciliación 
 		p Una vez se reciba la información, el Centro de Conciliación de la Universidad El Bosque se comunicará con Usted para acordar el día y hora que se hará la entrevista y la forma en que se realizará, ya sea vía telefónica o por medios virtuales.
 		a(href='#' style="border:solid;color:#EC2462") Registrarme Ahora
 	
-	section(style="text-align:center;margin-bottom:4rem;")
-		h1(style="color:#EC2462;") Nuestro Centro de Conciliación
-		p(style="margin-left: auto;margin-right: auto;") Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+	section.fotos
+		h1 Nuestro Centro de Conciliación
+		p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
 
 	section
 		div.carousel.carousel-main(data-flickity='{ "imagesLoaded": true, "percentPosition": false }')
