--- a/scss/style.scss
+++ b/scss/style.scss
@@ -17,6 +17,7 @@
 @import 'sections/_grupos-apoyo';
 @import 'sections/_banner-dudas';
 @import 'sections/_formulario';
+@import 'sections/_fotos';
 @import 'sections/_lo-nuevo';
 @import 'sections/_informacion-legal';
 @import 'sections/_footer';
