--- a/scss/sections/_tabs-container-centro.scss
+++ b/scss/sections/_tabs-container-centro.scss
@@ -1,6 +1,9 @@
 /* ---------------------------------- tabs  -----------------------------
 	------------------------------------------------------------------------------- */
 
+    $phone: 380px;
+        $small: 450px;
+        $medium: 900px;
 
     section.tabs_container_centro{
 	
@@ -8,10 +11,12 @@
             margin: 0;
             padding: 0;
             @include display-grid;
-            @include grid-parent-5-columns (1fr, 1fr, 1fr, 1fr, 1fr);
+            @include grid-parent-2-columns (1fr, 1fr);
             border-bottom: 2px solid $color_light_grey;
             margin-bottom: 2rem;
-            
+            @media screen and (max-width: $small) {
+                grid-template-columns: 1fr;
+            }
             li{
                 text-align: center;
                 position: relative;
@@ -58,7 +63,9 @@
         .ui-tabs-panel{
             @include display-grid ;
             @include grid-parent-2-columns (1fr, 2fr);
-            
+            @media screen and (max-width: $small) {
+                grid-template-columns:1fr;
+            }
             .content_left{
                 padding: 2rem;
             }
@@ -67,7 +74,9 @@
                 padding: 5rem 4rem 2rem 4rem;
                 position: relative;
                 background: $color_rosa_light;
-                
+                @media screen and (max-width: $small) {
+                    padding: 2rem;
+                }
                 &:before{
                     width: 60%;
                     height: 100%;
@@ -125,7 +134,10 @@
                     margin: 1rem;
                     border-bottom: 0;
                     @include grid-parent-1-columns (1fr);
-                    
+                    @media screen and (max-width: $small) {
+                        padding: 1rem 0rem 0rem 1rem;
+                        margin: 0;
+                        }
                     &:hover{
                         &:after{
                             display: none;
